--- a/css/style.css
+++ b/css/style.css
@@ -124,12 +124,6 @@ section img {
   text-align: center;
 }
 
-.day {
-  position: relative;
-  top: 90px;
-  left: 180px;
-}
-
 .asa img {
   width: 300px;
   height: 300px;
@@ -300,7 +294,6 @@ section img {
   align-items: center;
   justify-content: center;
   background-color: rgb(163, 163, 163);
-  margin: 0 -100px;
   padding: 0 100px;
 }
 
